--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,6 +12,7 @@ body {
 	background-color: #f5f5f5;
 	padding: 5px;
 	padding-top: 100px;
+	height: auto;
 }
 
 .StatusBar {
@@ -33,6 +34,19 @@ body {
 .navigationBar {
 	display: flex;
 	justify-content: space-between;
+}
+
+.dropdown-content {
+	display: none; /* Скрыто по умолчанию */
+	position: absolute;
+	background-color: #e9e9e9;
+	border-radius: 10px;
+	height: 100px;
+	width: 70px;
+}
+
+.dropdown-content.show {
+	display: block; /* Показывается при добавлении класса */
 }
 
 .Search {
