--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -15,6 +15,19 @@ body {
 	height: auto;
 }
 
+.Login > body {
+	height: 100%;
+	background-color: #ffffff;
+}
+
+.login-input {
+	background-color: #c5c5c5;
+	width: 100%;
+	height: 30px;
+	margin-top: 10px;
+	border-radius: 10px;
+}
+
 .StatusBar {
 	max-height: 30px;
 	display: flex;
@@ -34,6 +47,7 @@ body {
 .navigationBar {
 	display: flex;
 	justify-content: space-between;
+	gap: 20%;
 }
 
 .dropdown-content {
