--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -111,20 +111,20 @@ body {
 	grid-template-columns: 169px 169px;
 }
 
-.Goods > div {
+.Goods > product-card {
 	width: 169px;
 	height: 292px;
 	background-color: rgb(204, 204, 204);
 	border-radius: 20px;
 }
 
-.Goods > div > img {
+.product-card > img {
 	max-width: 184px;
 	max-height: 184px;
 	border-radius: 20px;
 }
 
-.Goods > div > button {
+.product-card > button {
 	width: 160px;
 	margin-left: 5px;
 }
@@ -135,4 +135,23 @@ body {
 	width: 100%;
 	max-width: 350px;
 	background-color: #f5f5f5;
+}
+
+.cart-item > img {
+	max-width: 170px;
+	max-height: 170px;
+	border-radius: 20px;
+	margin: 7px;
+}
+
+.cart-item {
+	max-width: 170px;
+	background-color: #7c7c7c;
+	border-radius: 20px;
+}
+
+.cart-item button {
+	margin-left: 7px;
+	margin-right: 7px;
+	max-width: 156px;
 }
