--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,10 +9,10 @@ body {
 		-apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", sans-serif;
 	line-height: 1.6;
 	color: #333;
-	background-color: #f5f5f5;
+	background-color: #d4d4d4;
 	padding: 5px;
 	padding-top: 100px;
-	height: auto;
+	height: 100%;
 }
 
 .Login > body {
